--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <h1> めう </h1>
 
-<a href="https://github.com/gabdro">github</a>
-<a href="https://twitter.com/wktk0">twitter</a>
-<a href="https://qiita.com/gabdro">qiita</a>
-<a href="https://www.openrec.tv/user/yumenokanade">OPENREC account</a>
-<a href="http://www.nicovideo.jp/user/14129206">niconico</a>
+<ul>
+  <li><a href="https://github.com/gabdro">github</a></li>
+  <li><a href="https://twitter.com/wktk0">twitter</a></li>
+  <li><a href="https://qiita.com/gabdro">qiita</a></li>
+  <li><a href="https://www.openrec.tv/user/yumenokanade">OPENREC account</a></li>
+  <li><a href="http://www.nicovideo.jp/user/14129206">niconico</a></li>
+</ul>
