--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
-<h1> めう </h1>
-
-<ul>
-  <li><a href="https://github.com/gabdro">github</a></li>
-  <li><a href="https://twitter.com/wktk0">twitter</a></li>
-  <li><a href="https://qiita.com/gabdro">qiita</a></li>
-  <li><a href="https://www.openrec.tv/user/yumenokanade">OPENREC account</a></li>
-  <li><a href="http://www.nicovideo.jp/user/14129206">niconico</a></li>
-</ul>
+<!DOCTYPE html>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8">
+    <title> memo <_title>
+  </head>
+  <body>
+    <h1> 自分を使っているアカウント </h1>
+    <ul>
+      <li><a href="https://github.com/gabdro">github</a></li>
+      <li><a href="https://twitter.com/wktk0">twitter</a></li>
+      <li><a href="https://qiita.com/gabdro">qiita</a></li>
+      <li><a href="https://www.openrec.tv/user/yumenokanade">OPENREC</a></li>
+      <li><a href="http://www.nicovideo.jp/user/14129206">niconico</a></li>
+    </ul>
+  </body>
+</html>
