--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
-    <title> memo <_title>
+    <title> memo </title>
   </head>
   <body>
     <h1> 自分を使っているアカウント </h1>
