--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title> memo </title>
   </head>
-  <body>
-    <h1> 自分を使っているアカウント </h1>
+  <body　bgcolor="#ffffff">
+    <h1> my account </h1>
     <ul>
       <li><a href="https://github.com/gabdro">github</a></li>
       <li><a href="https://twitter.com/wktk0">twitter</a></li>
