--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title> memo </title>
   </head>
   <body　bgcolor="#ffffff">
+    <div>
+      name: @wktk0 </br>
+    brith: 09.22(🔥) </br>
+    </div>
     <h1> my account </h1>
     <ul>
       <li><a href="https://github.com/gabdro">github</a></li>
